--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "jspdf": "^3.0.1",
-    "next-themes": "^0.4.0",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
+    "next-themes": "^0.4.0",
     "pdfjs-dist": "^5.3.31",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
@@ -59,18 +59,19 @@
     "recharts": "^2.15.3",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
     "zod": "^3.25.56"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.8",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
+    "eslint": "9.29.0",
+    "eslint-config-next": "15.3.3",
     "postcss": "^8.5.4",
-    "tailwindcss": "^4.1.8",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   }
