Update Vercel configuration to include build command and refine SSR file inclusion. Added build command to static build configuration and specified included files for SSR to enhance deployment efficiency.

--- a/vercel.json
+++ b/vercel.json
@@ -4,15 +4,10 @@
     {
       "src": "package.json",
       "use": "@vercel/static-build",
-      "config": { "distDir": "dist/client" }
+      "config": { "distDir": "dist/client", "buildCommand": "npm run build" }
     },
-    { "src": "api/ssr.js", "use": "@vercel/node" }
+    { "src": "api/ssr.js", "use": "@vercel/node", "config": { "includeFiles": "dist/**" } }
   ],
-  "functions": {
-    "api/ssr.js": {
-      "includeFiles": "dist/**"
-    }
-  },
   "routes": [
     { "src": "/assets/(.*)", "dest": "/assets/$1" },
     {
