refactor: Adjust Vercel deployment configuration and SSR path resolution to correctly locate build artifacts.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build:client": "vite build",
-    "build:ssr": "vite build --ssr src/entry-server.jsx",
+    "build:ssr": "vite build --ssr src/entry-server.jsx --outDir dist/server",
     "build": "node scripts/generate-sitemap.mjs && npm run build:client && npm run build:ssr",
     "lint": "eslint .",
     "preview": "vite preview"
